# energy-indicator

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  README.md  buttons.c  main.c  network.c  page.h  settings.c  settings.h
main/hardware/: README.md  battery.c  battery.h  buttons.c  buttons.h  clock_led.c  clock_led.h  led_strip.c  led_strip.h  pins.h
main/hardware/display/: epd2in9b.c  epd2in9b.h  epdpaint.c  epdpaint.h  font24.c  font64.c  fonts.h
main/memory/: settings.c  settings.h  solar_data.c  solar_data.h
main/network/: README.md  http.c  http.h  page.c  page.h  time.c  time.h  wifi.c  wifi.h
