idf_component_register(SRCS "hardware/battery.c" "memory/settings.c" "network/wifi.c" "network/http.c" "main.c" "network/page.c" "memory/solar_data.c" "hardware/clock_led.c" "hardware/led_strip.c" "hardware/display/epd2in9b.c" "hardware/display/epdpaint.c" "hardware/display/font24.c"
                    INCLUDE_DIRS ".")
